# gazebo-data-annotator

./: CMakeLists.txt  LICENSE  README.md  coco_dataset.py  gazebo_tools.py  package.xml  setup.py  training_data_generator.py
scripts/: show_bboxes.py
src/gazebo-data-annotator/: coco_dataset.py  gazebo_tools.py  training_data_generator.py
