<?xml version="1.0"?>
<!--
  ~ Nikolaus Wagner Copyright (c) 2020
  ~ Email: nwagner@lincoln.ac.uk
  -->

<package format="2">
  <name>gazebo-data-annotator</name>
  <version>0.0.1</version>
  <description>Package for generating annotated training data from gazebo</description>

  <maintainer email="nwagner@lincoln.ac.uk">Nikolaus Wagner</maintainer>

  <license>see LICENSE in project root</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>